Hello world in JavaFX

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ group=edu.cnm.deepdive
 version=22.0.0
 
 basePackage=edu.cnm.deepdive.codebreaker
+mainClass=edu.cnm.deepdive.codebreaker.JavaFxMain
+mainModule=edu.cnm.deepdive.codebreaker
