moving codePoint-to-name and -class lookups to CodePointInfo

--- a/javafx/src/main/resources/bundles/game.properties
+++ b/javafx/src/main/resources/bundles/game.properties
@@ -8,5 +8,7 @@ length=4
 main_layout=/layouts/main.fxml
 guess_item_layout=/layouts/guess_item.fxml
 palette_item_layout=/layouts/palette_item.fxml
+guess_history_layout=/layouts/guess_history_item.fxml
+guess_character_layout=/layouts/guess_history_character.fxml
 
 send_tooltip=Submit guess
